<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="title_activity_welcome">Welcome</string>
    <string name="title_activity_signup">SignIn</string>
    <string name="title_activity_new_order">New Order</string>
    <string name="app_name">UserProfile</string>
    <string name="action_settings">Settings</string>
    <string name="user">User</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signin">Sign in</string>
    <string name="name">Name</string>
    <string name="email">E-mail</string>
    <string name="phone">Phone</string>
    <string name="profession">Profession</string>
    <string name="signup">Sign up</string>
    <string name="welcome">Welcome</string>
    <string name="seeOrders">See Orders</string>
    <string name="newOrder">New Order</string>
    <string name="add">Add</string>
    <string name="menu">Menu</string>
    <string name="extras">Extras</string>
    <string name="mainDish">Main Dish</string>
    <string name="sideDish">Side Dish (choose 2)</string>
    <string name="wantSoup">Want soup?</string>
    <string name="beverage">Beverage</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="dessert">Dessert</string>
    <string name="hotBeverages">Hot Beverages</string>
    <string name="coffee">Coffee</string>
    <string name="tea">Tea</string>
    <string name="coldBeverages">Cold Beverages</string>
    <string name="beer">Beer</string>
    <string name="whiskey">Whiskey</string>
    <string name="rum">Rum</string>
    <string name="tequila">Tequila</string>
    <string name="title_activity_list_orders">Orders List</string>

</resources>
