<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/lytPersonalData"
    android:orientation="vertical">

    <EditText
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:id="@+id/txtName"
        android:hint="@string/name"
        android:drawableLeft="@drawable/ic_action_user"
        android:drawablePadding="10dp"/>
    <EditText
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:id="@+id/txtEmail"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:drawableLeft="@drawable/ic_action_mail"
        android:drawablePadding="10dp"/>
    <EditText
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:id="@+id/txtPhone"
        android:inputType="phone"
        android:hint="@string/phone"
        android:drawableLeft="@drawable/ic_action_call"
        android:drawablePadding="10dp"/>
    <EditText
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:id="@+id/txtProfession"
        android:hint="@string/profession"
        android:drawablePadding="10dp"/>

</LinearLayout>