<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:id="@+id/lytMain">

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lytLogin"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="horizontal"
        android:columnCount="1"
        android:rowCount="2">
        <EditText
            android:id="@+id/txtUser"
            android:layout_width="200dp"
            android:drawableLeft="@drawable/ic_action_user"
            android:drawablePadding="10dp"
            android:hint="@string/user" />
        <EditText
            android:id="@+id/txtPassword"
            android:layout_width="200dp"
            android:inputType="textPassword"
            android:hint="@string/password"/>
        <Button
            android:id="@+id/btnLogin"
            android:text="@string/login"
            android:layout_width="120dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"/>
        <TextView
            android:id="@+id/lblSignup"
            android:text="@string/signin"
            android:layout_marginTop="10dp"
            android:textSize="16dp"
            android:layout_gravity="center"/>
    </GridLayout>

</RelativeLayout>
