<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".SignupActivity"
    android:id="@+id/lytSignup">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">
        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lytPersonalData"
            android:orientation="horizontal"
            android:columnCount="2"
            android:rowCount="4">
            <TextView
                android:text="@string/name"
                android:layout_marginTop="5dp"
                android:textSize="22dp"
                android:gravity="center"/>
            <EditText
                android:id="@+id/txtName"
                android:layout_width="200dp"
                android:layout_marginLeft="8dp"/>
            <TextView
                android:text="@string/email"
                android:layout_marginTop="5dp"
                android:textSize="22dp"
                android:gravity="center"/>
            <EditText
                android:id="@+id/txtEmail"
                android:layout_width="200dp"
                android:layout_marginLeft="8dp"/>
            <TextView
                android:text="@string/phone"
                android:layout_marginTop="5dp"
                android:textSize="22dp"
                android:gravity="center"/>
            <EditText
                android:id="@+id/txtPhone"
                android:layout_width="200dp"
                android:layout_marginLeft="8dp"/>
            <TextView
                android:text="@string/profession"
                android:layout_marginTop="5dp"
                android:textSize="22dp"
                android:gravity="center"/>
            <EditText
                android:id="@+id/txtProfession"
                android:layout_width="200dp"
                android:layout_marginLeft="8dp"/>
        </GridLayout>
        <Button
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"/>
    </LinearLayout>

</RelativeLayout>
